--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   "homepage": "https://github.com/dagda1/knex-csv-reader#readme",
   "dependencies": {
     "knex": "^0.11.10",
-    "lodash": "^4.15.0"
+    "lodash": "^4.15.0",
+    "pg": "^6.1.0"
   },
   "devDependencies": {
     "babel-cli": "^6.14.0",
