--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Transform CSV input into knex ready seed objects",
   "main": "index.js",
   "scripts": {
-    "test": "NODE_ENV=test ./node_modules/.bin/mocha  --compilers js:babel-core/register  --reporter spec ./test/*-test.js"
+    "test": "NODE_ENV=test ./node_modules/.bin/mocha --compilers js:babel-core/register --reporter spec ./test/*-test.js",
+    "test-debug": "node-inspector --web-port=9000 & ./node_modules/.bin/mocha --debug-brk  --require babel-polyfill ./test/**/*-test.js --compilers js:babel-core/register --recursive --source-maps"
   },
   "repository": {
     "type": "git",
@@ -22,6 +23,8 @@
   },
   "homepage": "https://github.com/dagda1/knex-csv-reader#readme",
   "dependencies": {
+    "babel-polyfill": "^6.13.0",
+    "csv-parse": "^1.1.7",
     "knex": "^0.11.10",
     "lodash": "^4.15.0",
     "pg": "^6.1.0"
@@ -31,6 +34,7 @@
     "babel-loader": "^6.2.5",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.14.0",
     "babel-preset-es2015": "^6.14.0",
+    "babel-preset-stage-0": "^6.5.0",
     "bluebird": "^3.4.3",
     "chai": "^3.5.0",
     "iconv-lite": "^0.4.13",
