--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "NODE_ENV=test ./node_modules/.bin/mocha --compilers js:babel-core/register --reporter spec ./test/*-test.js",
-    "test-debug": "node-inspector --web-port=9000 & ./node_modules/.bin/mocha --debug-brk  --require babel-polyfill ./test/**/*-test.js --compilers js:babel-core/register --recursive --source-maps"
+    "test-debug": "node-inspector --web-port=9000 & ./node_modules/.bin/mocha --debug-brk --require babel-polyfill ./test/**/*-test.js --compilers js:babel-core/register --recursive --source-maps"
   },
   "repository": {
     "type": "git",
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/dagda1/knex-csv-reader#readme",
   "dependencies": {
+    "babel-plugin-transform-async-to-generator": "^6.8.0",
     "babel-plugin-transform-object-rest-spread": "^6.8.0",
     "babel-polyfill": "^6.13.0",
     "csv-parse": "^1.1.7",
@@ -37,6 +38,7 @@
     "babel-plugin-transform-es2015-modules-commonjs": "^6.14.0",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-stage-0": "^6.5.0",
+    "babel-preset-stage-3": "^6.11.0",
     "bluebird": "^3.4.3",
     "chai": "^3.5.0",
     "iconv-lite": "^0.4.13",
