--- a/package.json
+++ b/package.json
@@ -1,16 +1,22 @@
 {
   "name": "knex-csv-transformer",
-  "version": "0.0.1",
+  "version": "1.0.4",
   "description": "Transform CSV input into knex ready seed objects",
-  "main": "index.js",
+  "main": "lib/knex-csv-transformer.js",
+  "files": [
+    "lib/*.js",
+    "README.md"
+  ],
   "scripts": {
     "test": "NODE_ENV=test ./node_modules/.bin/mocha --compilers js:babel-core/register --reporter spec ./test/*-test.js",
     "test-debug": "node-inspector --web-port=9000 & ./node_modules/.bin/mocha --debug-brk --require babel-polyfill ./test/**/*-test.js --compilers js:babel-core/register --recursive --source-maps",
-    "createdb": "psql -h localhost -U paulcowan -p 5432 -q -f test/fixtures/database.sql"
+    "createdb": "psql -h localhost -U paulcowan -p 5432 -q -f test/fixtures/database.sql",
+    "build": "./node_modules/.bin/babel -d lib -s inline src",
+    "watch": "./node_modules/.bin/babel -d lib -s inline -w src"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/dagda1/knex-csv-reader.git"
+    "url": "git+https://github.com/dagda1/knex-csv-transformer.git"
   },
   "keywords": [
     "knex",
@@ -24,9 +30,6 @@
   },
   "homepage": "https://github.com/dagda1/knex-csv-reader#readme",
   "dependencies": {
-    "babel-plugin-transform-async-to-generator": "^6.8.0",
-    "babel-plugin-transform-object-rest-spread": "^6.8.0",
-    "babel-polyfill": "^6.13.0",
     "csv-parse": "^1.1.7",
     "knex": "^0.11.10",
     "lodash": "^4.15.0",
@@ -34,6 +37,9 @@
     "pg": "^6.1.0"
   },
   "devDependencies": {
+    "babel-plugin-transform-async-to-generator": "^6.8.0",
+    "babel-plugin-transform-object-rest-spread": "^6.8.0",
+    "babel-polyfill": "^6.13.0",
     "babel-cli": "^6.14.0",
     "babel-loader": "^6.2.5",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.14.0",
