--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "README.md"
   ],
   "scripts": {
-    "test": "NODE_ENV=test ./node_modules/.bin/mocha --compilers js:babel-core/register --reporter spec ./test/*-test.js",
+    "test": "NODE_ENV=test ./node_modules/.bin/mocha --compilers js:babel-core/register --reporter mocha-better-spec-reporter ./test/*-test.js",
     "test-debug": "node-inspector --web-port=9000 & ./node_modules/.bin/mocha --debug-brk --require babel-polyfill ./test/**/*-test.js --compilers js:babel-core/register --recursive --source-maps",
     "createdb": "psql -h localhost -U paulcowan -p 5432 -q -f test/fixtures/database.sql",
     "build": "./node_modules/.bin/babel -d lib -s inline src",
@@ -37,12 +37,12 @@
     "pg": "^6.1.0"
   },
   "devDependencies": {
-    "babel-plugin-transform-async-to-generator": "^6.8.0",
-    "babel-plugin-transform-object-rest-spread": "^6.8.0",
-    "babel-polyfill": "^6.13.0",
     "babel-cli": "^6.14.0",
     "babel-loader": "^6.2.5",
+    "babel-plugin-transform-async-to-generator": "^6.8.0",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.14.0",
+    "babel-plugin-transform-object-rest-spread": "^6.8.0",
+    "babel-polyfill": "^6.13.0",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-stage-0": "^6.5.0",
     "babel-preset-stage-3": "^6.11.0",
@@ -50,6 +50,7 @@
     "chai": "^3.5.0",
     "iconv-lite": "^0.4.13",
     "mocha": "^3.0.2",
+    "mocha-better-spec-reporter": "^3.0.2",
     "should": "^11.1.0"
   }
 }
